--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 		<link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
 		<script type="text/javascript" src="galleria/galleria-1.3.5.js"></script> 
-		<link type="text/css" rel="stylesheet" href="galleria/themes/classicmod/galleria.classicmod.css">
-		<script type="text/javascript" src="galleria/themes/classicmod/galleria.classicmod.js"></script>
+		<!-- <link type="text/css" rel="stylesheet" href="galleria/themes/classicmod/galleria.classicmod.css"> -->
+		<!-- <script type="text/javascript" src="galleria/themes/classicmod/galleria.classicmod.js"></script> -->
 		<script src="galleria/plugins/flickr/galleria.flickr.js"></script>
 		
 		</script>
@@ -150,7 +150,10 @@ var z7hh0wr1lnrb31;(function(d, t) {
 			<script>
 				impress().init();
 
+				//Galleria.loadTheme('galleria/themes/azure/galleria.azur.min.js');
+				Galleria.loadTheme('galleria/themes/classicmod/galleria.classicmod.js');
 				Galleria.run('.galleria');
+				//Galleria.run('.galleria',{ trueFullscreen: true});
 
 				$('.galleria').galleria({ 
 					flickr: 'user:124608923@N03',
