--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
 		<script type="text/javascript" src="galleria/galleria-1.3.5.js"></script> 
 		<!-- <link type="text/css" rel="stylesheet" href="galleria/themes/classicmod/galleria.classicmod.css"> -->
 		<!-- <script type="text/javascript" src="galleria/themes/classicmod/galleria.classicmod.js"></script> -->
+		
+		<link type="text/css" rel="stylesheet" href="galleria/themes/azure/galleria.azur.css">
+		<script type="text/javascript" src="galleria/themes/azure/galleria.azur.js"></script>
+		
 		<script src="galleria/plugins/flickr/galleria.flickr.js"></script>
 		
 		</script>
@@ -151,9 +155,9 @@ var z7hh0wr1lnrb31;(function(d, t) {
 				impress().init();
 
 				//Galleria.loadTheme('galleria/themes/azure/galleria.azur.min.js');
-				Galleria.loadTheme('galleria/themes/classicmod/galleria.classicmod.js');
-				Galleria.run('.galleria');
-				//Galleria.run('.galleria',{ trueFullscreen: true});
+				//Galleria.loadTheme('galleria/themes/classicmod/galleria.classicmod.js');
+				//Galleria.run('.galleria');
+				Galleria.run('.galleria',{ trueFullscreen: true});
 
 				$('.galleria').galleria({ 
 					flickr: 'user:124608923@N03',
