--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
 
 
-			<div style='overflow:scroll;' id='contact' class="step slide" data-x="0" data-y="-600">
+			<div  id='contact' class="step slide" data-x="0" data-y="-600">
 				<div class='content'>
 					<h2>Contact</h2>
 
